4p-Activity-VPC-EC2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Section 3 Activity template. 
  It launches a VPC with public and private subnets, 
  a web server EC2 instance in the public subnet 
  and a security group attached to this EC2 instance.
Parameters:
  InstanceType:
    Type: String 
    Description: InstanceType class
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
    Default: t2.micro
    ConstraintDescription: 'InstanceType parameter can only have these values: t2.nano, t2.micro, t2.small'
  ImageId:
    Type: String 
    Description: ImageId
    Default: ami-05c1fa8df71875112
  EBSVolumeSize:
    Type: Number
    Description: EBS storage size in GB
    MinValue: 1
    MaxValue: 30
    Default: 5
    ConstraintDescription: AllocatedStorage parameter value should be between 8 and 20.
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: 'Keypair instance'
  CIDRSubnetsVPC:
    Type: CommaDelimitedList
    Description: 'Db subnet ids as a list: <VPC>,<subnet1>,<subnet2>'
  RegionName:
    Type: AWS::EC2::AvailabilityZone::Name 
    Default: us-west-2
    Description: 'A valid VPC id in your AWS account'

Resources:
  # VPC ---
  Vpc:
    Type: AWS::EC2::VPC
    Description: Section 3 activity VPC
    Properties:
      CidrBlock: !Select [0, !Ref CIDRSubnetsVPC]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-vpc'

  # Subnets ---        
  PublicSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Ref RegionName
      CidrBlock: !Select [1, !Ref CIDRSubnetsVPC]
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: Public Subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet 
    Properties:
      AvailabilityZone: !Ref RegionName
      CidrBlock: !Select [2, !Ref CIDRSubnetsVPC]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: Private Subnet

  # Route tables ---
  PublicRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: Public Route Table
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable 
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: Private Route Table

  # Internet route for the public route table ---
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  InternetRoute:
    Type: AWS::EC2::Route 
    DependsOn:
      - VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0

  # Subnet - Route table associations ---    
  PublicSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PrivateSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  # Web server and security group ---
  WebServerInstance:
    Type: AWS::EC2::Instance 
    DependsOn:
      - InternetRoute
      - PublicSubnetRouteTableAssoc
    Properties:
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PublicSubnet 
      ImageId: !Ref ImageId
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/sdf
          Ebs:
            VolumeSize: !Ref EBSVolumeSize
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: Web Server

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Activity security group 
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp # HTTP rule
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # SSH rule
          FromPort: 22 
          ToPort: 22
          CidrIp: 0.0.0.0/0
